Kubernetes/Ingress/k8s-dash-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-dash-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: k8sdash.info
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
