Kubernetes/Ingress/mongo-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-api-ingress
spec:
  rules:
    - host: api-mongo.local
      http:
        paths:
          - path: /api/mongo
            pathType: Prefix
            backend:
                serviceName: mongodb-api-service
                servicePort: 5004
